[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/blob.png" type="Texture" id=1]
[ext_resource path="res://scenes/monkey.gd" type="Script" id=2]
[ext_resource path="res://bloop.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/dust-anim/1.png" type="Texture" id=4]
[ext_resource path="res://assets/dust-anim/2.png" type="Texture" id=5]
[ext_resource path="res://assets/dust-anim/3.png" type="Texture" id=6]
[ext_resource path="res://step.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/pshow.gd" type="Script" id=8]
[ext_resource path="res://scenes/conshow.gd" type="Script" id=9]
[ext_resource path="res://scenes/bshow.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.539062, 0.539062, 0.539062, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[node name="blob" type="RigidBody2D"]
position = Vector2( 1, 0 )
collision_layer = 8388897
collision_mask = 262147
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 2.6
script = ExtResource( 2 )

[node name="Feet" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Feet"]
position = Vector2( 0, 10.3 )
scale = Vector2( 0.972222, 0.900296 )
polygon = PoolVector2Array( -8.22857, -3.33224, -5.14286, 0, 5.14286, 0, 8.22857, -2.55472, 8.22857, -2, 5, 1, -5, 1, -8.22857, -2 )

[node name="Suround" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Suround"]
position = Vector2( -1.19209e-07, -0.0937495 )
scale = Vector2( 1.04167, 1.09375 )
polygon = PoolVector2Array( -9, 5, -5, 9, 5, 9, 9, 6, 9, 2, 8.63997, 0.999999, 8, 0, 6.71998, -2.65714, 1, -7, -2, -7, -6.71998, -2.65714, -8.63997, 0.999999, -9, 2 )

[node name="water_zone" type="Area2D" parent="."]
position = Vector2( -1, 0 )
collision_layer = 0
collision_mask = 512

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="water_zone"]
position = Vector2( 0, -0.534968 )
scale = Vector2( 1, 0.95587 )
polygon = PoolVector2Array( -9, 5.7905, -4, 11.0213, 4, 11.0213, 9, 6.83667, 9, 2, 8, 1.60583, 8, 0, 7, -2, 1, -7, -2, -7, -8, 0, -8, 0, -8, 1.60583, -9, 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -1.535 )
scale = Vector2( 1, 0.95587 )
polygon = PoolVector2Array( -9, 5.7905, -5, 11.0213, 5, 11.0213, 9, 6.83667, 9, 2, 8, 1, 8, 0, 7, -2, 1, -7, -2, -7, -8, 0, -8, 0, -8, 1, -9, 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 10.0

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite3"]
visible = false
position = Vector2( 8, 4 )
frames = SubResource( 2 )
playing = true

[node name="step" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
pause_mode = 2
margin_left = -37.0
margin_top = 11.0
margin_right = -1.0
margin_bottom = 31.0
action_mode = 0
text = "info"
script = ExtResource( 10 )

[node name="Button2" type="Button" parent="."]
pause_mode = 2
margin_left = -37.5
margin_top = -31.0
margin_right = 37.5
margin_bottom = -11.0
action_mode = 0
text = "fullscreen"
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( -3, 0 )
scale = Vector2( 0.001, 15 )
texture = SubResource( 4 )
script = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 6000, 0 )
texture = SubResource( 4 )

[node name="c" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="c"]
margin_left = -92.0
margin_top = -16.0
margin_right = -18.0
margin_bottom = 34.0
text = "F:fullscreen
       R:reset
"

[node name="RichTextLabel2" type="RichTextLabel" parent="c"]
margin_left = 18.0
margin_top = -16.0
margin_right = 94.0
margin_bottom = 34.0
text = "Q:quit
/\\V<>:move"

[node name="Button3" type="Button" parent="."]
pause_mode = 2
margin_left = 1.0
margin_top = 11.0
margin_right = 37.0
margin_bottom = 31.0
action_mode = 0
text = "quit"
script = ExtResource( 10 )

[connection signal="area_entered" from="Suround" to="." method="_on_Suround_area_entered"]
[connection signal="button_down" from="Button" to="c" method="_on_Button_down"]
[connection signal="button_down" from="Button2" to="c" method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="c" method="_on_Button3_button_down"]
